[package]
name = "webmetro"
version = "0.3.1-dev"
authors = ["Tangent 128 <Tangent128@gmail.com>"]
edition = "2018"

[dependencies]
byteorder = "1"
bytes = "1"
clap = { version="^3.1.18", features=["cargo", "derive"] }
custom_error = "^1.7"
env_logger = "^0.9"
futures = "^0.3"
http = "^0.2"
hyper = "^0.14"
log = "^0.4.8"
matches = "^0.1"
pin-project = "1"
tokio = { version="^1.18", features = ["io-std", "macros", "net", "rt", "rt-multi-thread", "time"] }
tokio-util = { version="^0.7", features=["codec"] }
warp = "^0.3"
weak-table = "^0.3"
